Changes for 2.2.3

2.2.3rc2 was released as 2.2.3 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.3rc2

Bug fixes:
..F....... [ZBX-7864] fixed filter by host group in "Availability reports" page (Oleg)
.......P.. [ZBX-8006] fixed memory leak in proxy when handling ssh, telnet and database monitor items (Juris)
.......P.. [ZBXNEXT-166] fixed proxy not storing items with text value type (wiper)

--------------------------------------------------------------------------------
Changes for 2.2.3rc1

New features:
.......PS. [ZBXNEXT-2137] increased maximum cache size limit to 8gb from 2gb (Juris)
.......PS. [ZBXNEXT-166] implemented variable binding for bulk inserts with Oracle database (wiper)
.......PS. [ZBXNEXT-98] implemented bulk requests for SNMP monitoring (asaveljevs)
....IJ.... [ZBXNEXT-1889] made startup.sh and shutdown.sh scripts for Java gateway work in /bin/sh (asaveljevs)
.D........ [ZBX-7597] added description of the returned value types to the agentd manpage (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian, Japanese, Slovak and Turkish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-7896] fixed translated error messages not being rendered correctly in images (Pavels)
.......PS. [ZBX-7777] increased maximum data transfer limit per connection to remain consistent with 2.0 (Juris)
A......... [ZBX-7972] fixed not being able to full clone a template with an application if a destination host is specified (Ivo)
A......... [ZBX-7409] fixed inherited web items being added to incorrect applications when updating a template web scenario (Pavels)
..F....... [ZBX-7966] fixed possibility to copy a templated graph (Ivo)
..F....... [ZBX-7930] improved execution time in Maintenance page (Ivo)
..F....... [ZBX-7831] fixed regexp compilation errors for installations that use PHP with PCRE older than 7.0 (Pavels)